--- a/html/achievements.html
+++ b/html/achievements.html
@@ -83,6 +83,17 @@
                               The IIHM Teachers Day Awards 2019 is a unique initiative by the International Hospitality Council, London & Delhi and International Institute of Hotel Management. Over the last 5 years, the event has become most sought after and popular among the educators of the country and is now India’s biggest award. This award certainly merits and symbolises the conscientious Teaching fraternity of Chitkara International School.
                          </p>
                          </li>
+                         <script>
+                              class Event {
+                                   constructor(name, year) {
+                                        this.name = name;
+                                        this.year = year;
+                                   }
+                              }
+
+                              let event = new Event("IIHM Teachers Day Awards", 2019);
+                              document.getElementById("event").innerHTML = myCar.name() + " " + myCar.year();
+                         </script>
                          <br> 
                          <li>
                          Albanian Schools we collaborate<br>
@@ -179,16 +190,8 @@
           </div >
          
           <h2>We are happy, when our students are happy</h2>
-<div class="b">Lorem ipsum dolor, sit ametconsecteturadipisicingelit. Beatae inventore fugit quisquam itaque sed qui voluptas aut soluta corporis tenetur! Iure itaque repellendus totam voluptatem quae aspernatur ipsum ducimus magni.</div>
-<br><br><div class="vision3" style="background-color: silver; padding: 5px; border-radius: 2px; width: 700px; margin-left: 25%;">Our vision is a world where all autistic children and young people experience a positive education that supports wellbeing.
- The primary mission of Helios is to provide individualized research verified education services to children with autism.
-     It is our commitment to provide outstanding academic, vocational, and functional life programs.Our vision is a world where all autistic children and young people experience a positive education that supports wellbeing.
-     The primary mission of Helios is to provide individualized research verified education services to children with autism.
-         It is our commitment to provide outstanding academic, vocational, and functional life programs.Our vision is a world where all autistic children and young people experience a positive education that supports wellbeing.
-         The primary mission of Helios is to provide individualized research verified education services to children with autism.
-             It is our commitment to provide outstanding academic, vocational, and functional life programs.</div>
-</p>
-<hr>
+          <div class="b">Lorem ipsum dolor, sit ametconsecteturadipisicingelit. Beatae inventore fugit quisquam itaque sed qui voluptas aut soluta corporis tenetur! Iure itaque repellendus totam voluptatem quae aspernatur ipsum ducimus magni.</div>
+          <hr>
           <footer id="footer">
                <!--jscode-->
           </footer>
