--- a/html/contact.html
+++ b/html/contact.html
@@ -78,7 +78,7 @@
                             <span class="Instructions">Full Name</span>
                         </div>
                         <div class="inputBox">
-                            <input id="email" type="email" name="" required="required" onchange="validateEmail()">
+                            <input id="email" type="email" name="" autocomplete="on" required="required" onchange="validateEmail()">
                             <span class="Instructions">Email</span>
                         </div>
                         <div class="inputBox">
