--- a/html/donate.html
+++ b/html/donate.html
@@ -12,6 +12,21 @@
         <link rel="stylesheet" href="../css/style.css" type="text/css" media="all">
         <link rel="stylesheet" href="../css/contact-page-style.css" type="text/css" media="all">
         <script src="https://kit.fontawesome.com/ecebb8f563.js" crossorigin="anonymous"></script>
+        <script>
+            function allowDrop(ev) {
+                ev.preventDefault();
+            }
+            
+            function drag(ev) {
+                ev.dataTransfer.setData("text", ev.target.id);
+            }
+            
+            function drop(ev) {
+                ev.preventDefault();
+                var data = ev.dataTransfer.getData("text");
+                ev.target.appendChild(document.getElementById(data));
+            }
+        </script>
     </head>
     <body>
         <header id="header">
@@ -98,6 +113,14 @@
                             <div class="inputBox">
                                 <textarea required=""></textarea>
                                 <span class="Instructions">Leave a message</span>
+                            </div>
+                            <h5 style="color: rgb(112, 112, 112);">Are you a robot?</h5>
+                            <h6 style="color: rgb(148, 148, 147);">-To verify that you're a human please drag and drop the picture in it's place!</h6>
+                            <div class="dragdrop-div">
+                                <div id="div1" style="margin-left:8%;" ondrop="drop(event)" ondragover="allowDrop(event)">
+                                    <img id="drag1" src="../images/university.jpg" draggable="true" ondragstart="drag(event)">
+                                </div>
+                                <div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
                             </div>
                             <div class="inputBox">
                                 <input type="submit" name="" value="Send">
