some small changes

--- a/html/apply.html
+++ b/html/apply.html
@@ -145,10 +145,10 @@
         </div>
         <!--Script to open and close the dialog-->
         <script>
-            var modal = document.getElementById("info-dialog");
-            var btn = document.getElementById("open-dialog");
-            var saveBtn = document.getElementById("save");
-            var span = document.getElementsByClassName("close")[0];
+            let modal = document.getElementById("info-dialog");
+            let btn = document.getElementById("open-dialog");
+            let saveBtn = document.getElementById("save");
+            let span = document.getElementsByClassName("close")[0];
             
             // When the user clicks the button, open the dialog 
             btn.onclick = function() {
