--- a/html/about.html
+++ b/html/about.html
@@ -66,7 +66,7 @@
                               </div>
                               <div class="intro-div" id="introduction">
                                    <h1 style="color: rgb(206, 229, 208);">About us</h1>
-                                   <p style="color: rgb(248, 211, 30);">
+                                   <p style="color: rgb(204, 171, 7);">
                                         Helios Autism School opened its doors in 2017 in <span id="place"></span>. We expanded our footprint with a second school in Fall 2017 in 
                                         <script>
                                              function Place(first, second, third) {
@@ -85,8 +85,8 @@
                                         <br>
                                         In addition all students are assessed and screened with the <span class="txt-format">brigance</span> instructional tool to ensure our team of teachers and therapist have a full vision of the needs of our students.
                                         <script>
-                                             c = "a full vision of the needs of our students.";   
-                                             d = c.match(/students/gi);   
+                                             let c = "a full vision of the needs of our students.";   
+                                             let d = c.match(/students/gi);   
                                              document.write(d + ".");  
                                         </script>
                                         <br>
@@ -270,9 +270,6 @@
                     </section>
                </div>
          </div>
-      
-          
-
 
          <hr>
 
