little changes in achievements and apply

--- a/html/achievements.html
+++ b/html/achievements.html
@@ -80,7 +80,7 @@
                          <br>
                          <li>
                          <p>A teacher is one of the individuals who play a significant role in shaping the future of a child. Teachers are indeed instrumental in community building and helping to make a better society through their inspirational teachings. We are excited to share that Chitkara International School’s founding member, Ms. Kiran, Academic cum Hindi Coordinator, was conferred with ‘Teachers’ Day Award 2019’ by pioneering International Institute of Hotel Management (IIHM). Ms. Kiran was recognised and applauded for being an edifying torchbearer.
-                              The IIHM Teachers Day Awards 2019 is a unique initiative by the International Hospitality Council, London & Delhi and International Institute of Hotel Management. Over the last 5 years, the event has become most sought after and popular among the educators of the country and is now India’s biggest award. This award certainly merits and symbolises the conscientious Teaching fraternity of Chitkara International School.
+                              The <span id="event"></span> is a unique initiative by the International Hospitality Council, London & Delhi and International Institute of Hotel Management. Over the last 5 years, the event has become most sought after and popular among the educators of the country and is now India’s biggest award. This award certainly merits and symbolises the conscientious Teaching fraternity of Chitkara International School.
                          </p>
                          </li>
                          <script>
@@ -92,7 +92,7 @@
                               }
 
                               let event = new Event("IIHM Teachers Day Awards", 2019);
-                              document.getElementById("event").innerHTML = myCar.name() + " " + myCar.year();
+                              document.getElementById("event").innerHTML = event.name() + " " + event.year();
                          </script>
                          <br> 
                          <li>
