--- a/html/apply.html
+++ b/html/apply.html
@@ -155,7 +155,7 @@
                 modal.style.display = "block";
             }
             
-            save.onclick = function() {
+            saveBtn.onclick = function() {
                 modal.style.display = "none";
             }
             
