--- a/html/about.html
+++ b/html/about.html
@@ -67,7 +67,16 @@
                               <div class="intro-div" id="introduction">
                                    <h1 style="color: rgb(121, 43, 131);">About us</h1>
                                    <p style="color: rgb(121, 43, 131);">
-                                        Helios Autism School opened its doors in 2017 in <span id="place"></span>. We expanded our footprint with a second school in Fall 2017 in 
+                                        Helios Autism School opened its doors in 
+                                             <span id="demo"></span>
+                                        <script>
+                                        let d = new Date(2017, 8);    
+                                        let year = new Intl.DateTimeFormat('en', { year: 'numeric' }).format(d);
+                                        document.getElementById("demo").innerHTML = year;
+                                        </script>
+                                         in <span id="place"></span>. We expanded our footprint with a second school in Fall 
+                                         2017 
+                                         in 
                                         <script>
                                              function Place(first, second, third) {
                                                  this.firstPart = first;
