--- a/html/achievements.html
+++ b/html/achievements.html
@@ -105,7 +105,14 @@
                          </ol>
                          </li>
                          <br>
-                         <li>Helios International School is accredited with International School Award 2019-2022 for “Outstanding Development of International Dimension in the Curriculum by British Council.</li>
+                         <li>Helios International School is accredited with International School Award 
+                              <span id="demo"></span>
+                              <script>
+                              let d = new Date(2019, 8);    
+                              let year = new Intl.DateTimeFormat('en', { year: 'numeric' }).format(d);
+                              document.getElementById("demo").innerHTML = year;
+                              </script>
+                               for “Outstanding Development of International Dimension in the Curriculum by British Council.</li>
                          <br>
                          <li>Helios has always focused on investing in the future of children through programs that deck them with skills and tools. One of such initiatives was the exchange program titled “Partnership Between School”. This programme was a collaboration between Government Model Senior Secondary School, Dhanas and Chitkara International School. The discernible benefits of this collaboration included capacity building, sharing of ideas, innovative approach, etc. and the entire journey embarked upon resulted in a great learning and networking experience. This profuse association was applauded by Chandigarh Commission for Protection of Child Rights (CCPCR) at their event “National Consultation of UT’s on Creating Child-Friendly Cities” conducted on its 5th Foundation Day.</li>
                     </ul>
@@ -133,8 +140,14 @@
                          <h3>Dua Shala</h3>
                          <h6>Mathematician</h6>
                          <hr>
-                         <p> Dua Shala, a student from our school has won a silver medal in EGMO 2021.
-                         Dua now is studying mathematics in the Massachusets Institute of Technology(MIT) in USA with full schoolarship.
+                         <p> Dua Shala, a student from our school has won a silver medal in EGMO
+                              <span id="demo1"></span>
+                              <script>
+                              let d1 = new Date(2021, 9);    
+                              let year1 = new Intl.DateTimeFormat('en', { year: 'numeric' }).format(d1);
+                              document.getElementById("demo1").innerHTML = year1;
+                              </script>
+                         . Dua now is studying mathematics in the Massachusets Institute of Technology(MIT) in USA with full schoolarship.
                          </p>
                     </div>
                     <div class="person">
@@ -142,7 +155,13 @@
                          <h3>Suzanah Smith</h3>
                          <h6>Mathematician</h6>
                          <hr>
-                         <p> Suzanah, a student from our school has won a silver medal in EGMO 2021.
+                         <p> Suzanah, a student from our school has won a silver medal in EGMO 
+                              <span id="demo2"></span>
+                              <script>
+                              let d2 = new Date(2021, 8);    
+                              let year2 = new Intl.DateTimeFormat('en', { year: 'numeric' }).format(d2);
+                              document.getElementById("demo2").innerHTML = year2;
+                              </script>.
                          Dua now is studying mathematics in the Massachusets Institute of Technology(MIT) in USA with full schoolarship.
                          </p>
                     </div>
@@ -151,7 +170,13 @@
                          <h3>Mathew Scoot</h3>
                          <h6>Painter</h6>
                          <hr>
-                         <p> Mathew, a student from our school has won a silver medal in EGMO 2021.
+                         <p> Mathew, a student from our school has won a silver medal in EGMO 
+                              <span id="demo3"></span>
+                              <script>
+                              let d3 = new Date(2021, 8);    
+                              let year3 = new Intl.DateTimeFormat('en', { year: 'numeric' }).format(d3);
+                              document.getElementById("demo3").innerHTML = year3;
+                              </script>.
                          Dua now is studying mathematics in the Massachusets Institute of Technology(MIT) in USA with full schoolarship.
                          </p>
                     </div>
@@ -160,7 +185,13 @@
                          <h3>Perla Smith </h3>
                          <h6>Actor</h6>
                          <hr>
-                         <p> Perla, a student from our school has won a silver medal in EGMO 2021.
+                         <p> Perla, a student from our school has won a silver medal in EGMO 
+                              <span id="demo4"></span>
+                              <script>
+                              let d4 = new Date(2019, 8);    
+                              let year4 = new Intl.DateTimeFormat('en', { year: 'numeric' }).format(d4);
+                              document.getElementById("demo4").innerHTML = year4;
+                              </script>.
                          Dua now is studying mathematics in the Massachusets Institute of Technology(MIT) in USA with full schoolarship.
                          </p>
                     </div>
@@ -169,7 +200,13 @@
                          <h3>Wilson Anderson</h3>
                          <h6>Engineer</h6>
                          <hr>
-                         <p> Wilson, a student from our school has won a silver medal in EGMO 2021.
+                         <p> Wilson, a student from our school has won a silver medal in EGMO 
+                              <span id="demo5"></span>
+                              <script>
+                              let d5= new Date(2020, 8);    
+                              let year5 = new Intl.DateTimeFormat('en', { year: 'numeric' }).format(d5);
+                              document.getElementById("demo5").innerHTML = year5;
+                              </script>.
                          Dua now is studying mathematics in the Massachusets Institute of Technology(MIT) in USA with full schoolarship.
                          </p>
                     </div>
