--- a/html/index.html
+++ b/html/index.html
@@ -112,7 +112,7 @@
          </section>
 
          <section class="academic-section">
-              <h1 style="color:#829180">Academic Network</h4>
+              <h1 style="color:#f5b2d9">Academic Network</h4>
               <table>
                    <tr>
                         <th colspan="3">
@@ -136,7 +136,7 @@
                <div class="goals-div">
                     <table class="goals-table">
                          <tr>
-                              <th colspan="3" style="color: rgb(254, 228, 100);font-size: 25px;">Our goals</th>
+                              <th colspan="3" style="color: rgb(146, 47, 133);font-size: 25px;">Our goals</th>
                          </tr>
                          <tr>
                               <td>
@@ -200,7 +200,7 @@
              </div>
          </section>
          <div class="autisticpeople">
-              <h4 style="color: rgb(254, 228, 100); text-align: center;">We see geometric objects, autistic people see art</h4>
+              <h4 style="color: rgb(122, 29, 99); text-align: center;">We see geometric objects, autistic people see art</h4>
           <svg width="400" height="110">
                <rect width="300" height="100" style="fill:rgb(236, 233, 39);stroke-width:3;stroke:rgb(169, 150, 214)" />
           </svg>
@@ -211,7 +211,7 @@
                <polygon points="180,10 230,140 140,110" style="fill:lime;stroke:purple;stroke-width:1" />
           </svg>
           <svg height="140" width="300">
-               <ellipse cx="200" cy="80" rx="100" ry="50" style="fill:yellow;stroke:purple;stroke-width:2" />
+               <ellipse cx="200" cy="80" rx="100" ry="50" style="fill:yellow;stroke:rgb(238, 139, 9);stroke-width:2" />
           </svg>
          </div>
          <img id="sun" src="../images/sun-icon.png" alt="sun" width="30" height="30" style="display:none;">
