--- a/html/parents.html
+++ b/html/parents.html
@@ -31,7 +31,7 @@
          
 
         <div class="body">
-             <div class="wrapper">
+             <div class="wrapper" , >
                   <div class="title">
                        <h2>A word from our parents</h2>
                        <span>☀️☀️☀️☀️☀️</span>
