finished web worker task and made some fixes

--- a/html/achievements.html
+++ b/html/achievements.html
@@ -108,7 +108,7 @@
                               }
 
                               let event = new Event("IIHM Teachers Day Awards", 2019);
-                              document.getElementById("event").innerHTML = event.name() + " " + event.year();
+                              document.getElementById("event").innerHTML = event.name + " " + event.year;
                          </script>
                          <br> 
                          <li>
