--- a/html/contact.html
+++ b/html/contact.html
@@ -83,7 +83,7 @@
                             <span class="Instructions">Email</span>
                         </div>
                         <div class="inputBox">
-                            <input id="country_code" type="text" name="" required="required" pattern="[A-Za-a]{3}">
+                            <input id="country_code" type="text" name="" required="required" pattern="[A-Za-z]{3}">
                             <span class="Instructions">Country code</span>
                         </div>
                         <div class="inputBox">
